@@ -104,21 +104,21 @@ void PointCell::order(Cell& cell) const
 //-----------------------------------------------------------------------------
 bool PointCell::intersects(const MeshEntity& entity, const Point& p) const
 {
-  error("Not implemented.");
+  dolfin_not_implemented();
   return false;
 }
 //-----------------------------------------------------------------------------
 bool PointCell::intersects(const MeshEntity& entity,
                            const Point& p0, const Point& p1) const
 {
-  error("Not implemented.");
+  dolfin_not_implemented();
   return false;
 }
 //-----------------------------------------------------------------------------
 bool PointCell::intersects(const MeshEntity& entity,
                            const Cell& cell) const
 {
-  error("Not implemented.");
+  dolfin_not_implemented();
   return false;
 }
 
