@@ -1,3 +1,4 @@
+ - Add macro dolfin_not_implemented()
  - Add new interpolate() function for interpolation of user-defined function to discrete
  - Make _function_space protected in Function
  - Added access to crs data from python for uBLAS and MTL4 backend
